--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "host": "127.0.0.1",
   "port": 9924,
   "ffmpeg": "ffmpeg",
-  "storageDir": "D:\\xclabelProject\\bxc\\gitee\\xclabel\\static\\storage",
+  "storageDir": "D:\\xclabelProject\\storage",
   "yolo8": {
     "install_dir": "D:\\xclabelProject\\ai\\yolov8",
     "venv": "venv\\Scripts\\activate.bat",
